[package]
name = "cef-client"
version = "1.0.0-alpha.winonly"
authors = ["Kenton Hamaluik <kenton@rehabtronics.com>"]
edition = "2018"
build = "build.rs"
license = "MIT/Apache-2.0"

[dependencies]
log = "0.4"
winapi = { version = "0.3", features = ["impl-default", "winuser", "libloaderapi", "commctrl", "tlhelp32", "handleapi", "psapi", "errhandlingapi", "winbase", "shellapi"] }

[build-dependencies]
bindgen = "0.53"
winres = "0.1"

[dev-dependencies]
urlencoding = "1.0"
fern = { version = "0.5", features = ["colored"] }
